--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="main.css">
         <script src="app.js" type="module"></script>
     </head>
-    <body src="./images/background.png">
+    <body>
         <h1 id="nice">Gnomes & Goblins</h1>
         
         <div class="mainMenu">
