--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="intro">
         <h3>Chapter 1: Dungeons & Goblins</h3>
-        <h3>To move the Chracters use the keys W, S, A and D to move up,down left right respectively.</h3>
+        <h3>To move the Characters use the keys W, S, A and D to move up,down left right respectively.</h3>
         <p>The objective of the game is to catch a 100 goblins before they escape, good luck brave gnome!</p>
         <button id="lvl-1">Enter The dungeon</button>
     </div>
